corrected layout bug on view request oage

--- a/app/assets/stylesheets/responsive/_request_layout.scss
+++ b/app/assets/stylesheets/responsive/_request_layout.scss
@@ -3,9 +3,6 @@
 
 .describe_state_form,.gone_postal_help{
   @include grid-column(12);
-  @media( min-width: $main_menu-mobile_menu_cutoff ){
-    @include grid-column(8);
-  }
 }
 
 
